--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+####---===[ Python gitignore ]===---####
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -172,3 +173,27 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
+
+####---===[ C gitignore ]===---####
+#Some of these are related to eclipse. So i keep them out of my repo
+.cproject
+.dep/
+.project
+.settings/
+
+#files being edited
+*~
+
+# make and build files
+*.lst
+*.o
+*.eep
+*.lss
+*.map
+*.sym
+
+# I keep these, since I prefer having the reference of the final build
+# *.elf
+# *.hex
